# minisocks

./: .dockerignore  Cargo.toml  Dockerfile  LICENSE-MIT  README.md
.github/workflows/: build.yml  pages.yml
src/: main.rs  v4.rs  v5.rs
