[package]
name = "minisocks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "minisocks"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.79"
env_logger = "0.10.1"
log = "0.4.20"
socket2 = "0.5.5"
tokio = { version = "1.35.1", features = ["net", "macros", "rt", "io-util"] }

[profile.release]
lto = true
strip = true
